runtime/subnets.tf
# /16 for VPC, /20 for subnets --> 64 subnets of 1024ish hosts each max

/******************************************************************************
Public Subnets across multiple AZs
******************************************************************************/

resource "aws_subnet" "public_0" {
  vpc_id                  = "${aws_vpc.main.id}"
  cidr_block              = "${cidrsubnet(var.vpc_cidr_block, 6, 0)}"
  availability_zone       = "${data.aws_availability_zones.azs.names[0]}"
  map_public_ip_on_launch = true

  tags = {
    Name = "${var.basename}_pub_sub_0"
  }
}

/******************************************************************************
Create Public Gateway and Route
******************************************************************************/

resource "aws_internet_gateway" "public" {
  vpc_id = "${aws_vpc.main.id}"

  tags = {
    Name = "${var.basename}_pub_gw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.main.id}"

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.public.id}"
  }

  tags = {
    Name = "${var.basename}_pub_rtb"
  }
}

resource "aws_route_table_association" "public_0" {
  route_table_id = "${aws_route_table.public.id}"
  subnet_id      = "${aws_subnet.public_0.id}"
}
